:bug: fix: Fix Overview position on mobile

--- a/src/sass/components/overview.sass
+++ b/src/sass/components/overview.sass
@@ -10,6 +10,8 @@
     border-radius: .5rem
 
     @media screen and ( max-width: 815px )
+        position: relative
+        
         @include column("full")
         flex-direction: row
         flex-wrap: wrap
